add block-landing and block-description in html and scss

--- a/index.html
+++ b/index.html
@@ -54,7 +54,30 @@
         </ul>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="landing">
+        <div class="landing-text">
+          <h1 class="landing-header">META RECORD LABEL</h1>
+          <h3 class="lahding-describe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cumque explicabo incidunt maiores.</h3>
+          <div class="landing-button"><a href="/">Learn More</a></div>
+        </div>
+        <div class="landing-img-wrap"><img src="img/landing_image.jpg" alt="Image didn't load"></div>
+      </div>
+      <div class="description">
+        <figure>
+          <figcaption><h1 class="description-figurecaption-header1">WAVE NFT</h1><h1 class="description-figurecaption-header2">COLLECTION OF <br>777</h1>
+          <img src="/img/description_image.png" alt="img unload"></figcaption>
+        </figure>
+        <div class="description-text-block">
+          <h3 class="description-text-block-header">META WAVE NFT is your pass to Meta Record Label ecosystem. It is your access to our industry experts, established artists, and partners.</h3>
+          <h3 class="description-text-block-text">Hac habitasse platea dictumst vestibulum rhoncus est. Sit amet dictum sit amet justo. Tortor aliquam nulla facilisi cras.<br><br>
+            Maecenas ultricies mi eget mauris pharetra. Sit amet consectetur adipiscing elit ut aliquam purus. Porta nibh venenatis cras sed felis. Aenean vel elit scelerisque mauris pellentesque pulvinar. Et malesuada fames ac turpis egestas sed tempus. Enim sit amet venenatis urna cursus eget.<br><br>
+            Maecenas ultricies mi eget mauris pharetra et ultrices. A condimentum vitae sapien pellentesque habitant morbi.<br><br>
+          </h3>
+          <div class="description-text-block-button"><a href="/">Get one on OpenSea</a></div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
