--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <script
-      src="https://kit.fontawesome.com/de51f8eccb.js"
+      src="https://kit.fontawesome.com/8df69e60b4.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
@@ -40,16 +40,16 @@
       <div class="block-messengers">
         <ul>
           <li class="twitter">
-            <a href="/"><svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M52.837,15.065c-1.811,0.805-3.76,1.348-5.805,1.591c2.088-1.25,3.689-3.23,4.444-5.592c-1.953,1.159-4.115,2-6.418,2.454  c-1.843-1.964-4.47-3.192-7.377-3.192c-5.581,0-10.106,4.525-10.106,10.107c0,0.791,0.089,1.562,0.262,2.303  c-8.4-0.422-15.848-4.445-20.833-10.56c-0.87,1.492-1.368,3.228-1.368,5.082c0,3.506,1.784,6.6,4.496,8.412  c-1.656-0.053-3.215-0.508-4.578-1.265c-0.001,0.042-0.001,0.085-0.001,0.128c0,4.896,3.484,8.98,8.108,9.91  c-0.848,0.23-1.741,0.354-2.663,0.354c-0.652,0-1.285-0.063-1.902-0.182c1.287,4.015,5.019,6.938,9.441,7.019  c-3.459,2.711-7.816,4.327-12.552,4.327c-0.815,0-1.62-0.048-2.411-0.142c4.474,2.869,9.786,4.541,15.493,4.541  c18.591,0,28.756-15.4,28.756-28.756c0-0.438-0.009-0.875-0.028-1.309C49.769,18.873,51.483,17.092,52.837,15.065z"/></svg></a>
+            <a href="/"><i class="fa-brands fa-twitter"></i></a>
           </li>
           <li class="facebook">
-            <a href="/"><svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg></a>
+            <a href="/"><i class="fa-brands fa-facebook-f"></i></a>
           </li>
           <li class="youtube">
-            <a href="/"><svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M501.303,132.765c-5.887,-22.03 -23.235,-39.377 -45.265,-45.265c-39.932,-10.7 -200.038,-10.7 -200.038,-10.7c0,0 -160.107,0 -200.039,10.7c-22.026,5.888 -39.377,23.235 -45.264,45.265c-10.697,39.928 -10.697,123.238 -10.697,123.238c0,0 0,83.308 10.697,123.232c5.887,22.03 23.238,39.382 45.264,45.269c39.932,10.696 200.039,10.696 200.039,10.696c0,0 160.106,0 200.038,-10.696c22.03,-5.887 39.378,-23.239 45.265,-45.269c10.696,-39.924 10.696,-123.232 10.696,-123.232c0,0 0,-83.31 -10.696,-123.238Zm-296.506,200.039l0,-153.603l133.019,76.802l-133.019,76.801Z" style="fill-rule:nonzero;"/></svg></a>
+            <a href="/"><i class="fa-brands fa-youtube"></i></a>
           </li>
           <li class="telegram">
-            <a href="/"><svg viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"/></svg></a>
+            <a href="/"><i class="fa-solid fa-paper-plane"></i></a>
           </li>
         </ul>
       </div>
@@ -58,26 +58,53 @@
       <div class="landing">
         <div class="landing-text">
           <h1 class="landing-header">META RECORD LABEL</h1>
-          <h3 class="lahding-describe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cumque explicabo incidunt maiores.</h3>
+          <h3 class="lahding-describe">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cumque
+            explicabo incidunt maiores.
+          </h3>
           <div class="landing-button"><a href="/">Learn More</a></div>
         </div>
-        <div class="landing-img-wrap"><img src="img/landing_image.jpg" alt="Image didn't load"></div>
+        <div class="landing-img-wrap">
+          <img src="img/landing_image.jpg" alt="Image didn't load" />
+        </div>
       </div>
       <div class="description">
         <figure>
-          <figcaption><h1 class="description-figurecaption-header1">WAVE NFT</h1><h1 class="description-figurecaption-header2">COLLECTION OF <br>777</h1>
-          <img src="/img/description_image.png" alt="img unload"></figcaption>
+          <figcaption>
+            <h1 class="description-figurecaption-header1">WAVE NFT</h1>
+            <h1 class="description-figurecaption-header2">
+              COLLECTION OF <br />777
+            </h1>
+            <img src="/img/description_image.png" alt="img unload" />
+          </figcaption>
         </figure>
         <div class="description-text-block">
-          <h3 class="description-text-block-header">META WAVE NFT is your pass to Meta Record Label ecosystem. It is your access to our industry experts, established artists, and partners.</h3>
-          <h3 class="description-text-block-text">Hac habitasse platea dictumst vestibulum rhoncus est. Sit amet dictum sit amet justo. Tortor aliquam nulla facilisi cras.<br><br>
-            Maecenas ultricies mi eget mauris pharetra. Sit amet consectetur adipiscing elit ut aliquam purus. Porta nibh venenatis cras sed felis. Aenean vel elit scelerisque mauris pellentesque pulvinar. Et malesuada fames ac turpis egestas sed tempus. Enim sit amet venenatis urna cursus eget.<br><br>
-            Maecenas ultricies mi eget mauris pharetra et ultrices. A condimentum vitae sapien pellentesque habitant morbi.<br><br>
+          <h3 class="description-text-block-header">
+            META WAVE NFT is your pass to Meta Record Label ecosystem. It is
+            your access to our industry experts, established artists, and
+            partners.
           </h3>
-          <div class="description-text-block-button"><a href="/">Get one on OpenSea</a></div>
+          <h3 class="description-text-block-text">
+            Hac habitasse platea dictumst vestibulum rhoncus est. Sit amet
+            dictum sit amet justo. Tortor aliquam nulla facilisi cras.<br /><br />
+            Maecenas ultricies mi eget mauris pharetra. Sit amet consectetur
+            adipiscing elit ut aliquam purus. Porta nibh venenatis cras sed
+            felis. Aenean vel elit scelerisque mauris pellentesque pulvinar. Et
+            malesuada fames ac turpis egestas sed tempus. Enim sit amet
+            venenatis urna cursus eget.<br /><br />
+            Maecenas ultricies mi eget mauris pharetra et ultrices. A
+            condimentum vitae sapien pellentesque habitant morbi.<br /><br />
+          </h3>
+          <div class="description-text-block-button">
+            <a href="/">Get one on OpenSea</a>
+          </div>
         </div>
       </div>
     </main>
     <footer></footer>
+    <script
+      src="https://kit.fontawesome.com/de51f8eccb.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
