add new blocks (story, stringimage__wrap, roadmap)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li><a href="/">Contact</a></li>
         </ul>
       </nav>
-      <div class="block-messengers">
+      <div class="messengers">
         <ul>
           <li class="twitter">
             <a href="/"><i class="fa-brands fa-twitter"></i></a>
@@ -56,15 +56,15 @@
     </header>
     <main>
       <div class="landing">
-        <div class="landing-text">
-          <h1 class="landing-header">META RECORD LABEL</h1>
-          <h3 class="lahding-describe">
+        <div class="landing__text">
+          <h1 class="landing__title">META RECORD LABEL</h1>
+          <h3 class="lahding__subtitle">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Et cumque
             explicabo incidunt maiores.
           </h3>
-          <div class="landing-button"><a href="/">Learn More</a></div>
+          <div class="landing__button"><a href="/">Learn More</a></div>
         </div>
-        <div class="landing-img-wrap">
+        <div class="landing__wrapimg">
           <img src="img/landing_image.jpg" alt="Image didn't load" />
         </div>
       </div>
@@ -100,11 +100,136 @@
           </div>
         </div>
       </div>
+      <div class="artists">
+        <div class="artists__header">
+          <h1>ARTISTS</h1>
+        </div>
+        <div class="artists__block">
+          <figure>
+            <img src="img/photo1.png" alt="No photo" />
+            <figcaption>Mark Popson</figcaption>
+          </figure>
+          <figure>
+            <img src="img/photo2.png" alt="No photo" />
+            <figcaption>Pete Bentz</figcaption>
+          </figure>
+          <figure>
+            <img src="img/photo3.png" alt="No photo" />
+            <figcaption>Daniela Youth</figcaption>
+          </figure>
+          <figure>
+            <img src="img/photo4.png" alt="No photo" />
+            <figcaption>Roman Gore</figcaption>
+          </figure>
+          <figure>
+            <img src="img/photo5.png" alt="No photo" />
+            <figcaption>Tonya</figcaption>
+          </figure>
+          <figure>
+            <img src="img/photo6.png" alt="No photo" />
+            <figcaption>Ivor</figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="story">
+        <h1 class="story__header">MRL.<span>THE STORY.</span></h1>
+        <div class="story__block">
+          <div class="story__menu">
+            <ul>
+              <li>Our founders</li>
+              <li>Partners</li>
+              <li>The future</li>
+            </ul>
+          </div>
+          <div class="story__info">
+            <div class="story__image">
+              <img src="img/story_photo.png" alt="No photo" />
+            </div>
+            <div class="story__info__text">
+              <h1>
+                META record label was founded by Shaky Lake and Baky Hike in
+                2020 business accelerator.
+              </h1>
+              <h3>
+                Hac habitasse platea dictumst vestibulum rhoncus est. Sit amet
+                dictum sit amet justo. Tortor aliquam nulla facilisi cras.<br /><br />
+                Maecenas ultricies mi eget mauris pharetra. Sit amet consectetur
+                adipiscing elit ut aliquam purus. Porta nibh venenatis cras sed
+                felis. Aenean vel elit scelerisque mauris pellentesque pulvinar.
+                Et malesuada fames ac turpis egestas sed tempus. Enim sit amet
+                venenatis urna cursus eget.<br /><br />
+                Maecenas ultricies mi eget mauris pharetra et ultrices. A
+                condimentum vitae sapien pellentesque habitant morbi.<br /><br />
+              </h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="stringimage__wrap">
+        <img src="img/streak_photo.png" alt="No photo" />
+      </div>
+      <div class="roadmap">
+        <h1 class="roadmap__title">ROADMAP</h1>
+        <div class="roadmap__block">
+          <div class="roadmap__header">
+            <div class="roadmap__header__countbox">1</div>
+            <div class="roadmap__header__title">
+              <h5>PHASE 1</h3>
+                <h3>SPRING 2022 - PRE LAUNCH</h3>
+            </div>
+          </div>
+          <div class="roadmap__info">
+            <div class="roadmap__info__text"><h5>Website 1.2<br><br>
+              Discord community promotion<br><br>
+              MINTING WAVE NFTs<br><br>
+            </h5>
+            <h5>WAVE NFTs will be 100% pre-minted and launched as an OpenOcean collection</h5>
+            </div>
+            <img src="img/roadmap1.png" alt="No image">
+          </div>
+        </div>
+        <div class="roadmap__divider"></div>
+        <div class="roadmap__block">
+          <div class="roadmap__header">
+            <div class="roadmap__header__countbox">2</div>
+            <div class="roadmap__header__title">
+              <h5>PHASE 2</h3>
+                <h3>SUMMER 2022 - GROWTH</h3>
+            </div>
+          </div>
+          <div class="roadmap__info">
+            <div class="roadmap__info__text"><h5>Hiring for 10 positions in<br><br>
+              Partnerships with main Metaverse players<br><br>
+              Partnerships with WEB 2.0 music destribution channels<br><br>
+            </h5>
+            <h5>Onboarding 100 new artists<br><br>
+              META Record Labels is holding the first screening of aspiring artists from the list of WAVE NFT holders</h5>
+            </div>
+            <img src="img/roadmap2.png" alt="No image">
+          </div>
+        </div>
+        <div class="roadmap__divider"></div>
+        <div class="roadmap__block">
+          <div class="roadmap__header">
+            <div class="roadmap__header__countbox">3</div>
+            <div class="roadmap__header__title">
+              <h5>PHASE 3</h3>
+                <h3>SUMMER 2022 - YOUR NEW STAGE</h3>
+            </div>
+          </div>
+          <div class="roadmap__info">
+            <div class="roadmap__info__text"><h5>Onboarding new partners<br><br>
+              First live concert in Sandjar<br><br>
+              Live concert in Decentrafield<br><br>
+            </h5>
+            <h5>We secured dates for out artists to peform in front of the live audience of Metaverse. <br>Check the concert schedule in our <a href="/">Discord</a> </h5>
+            </div>
+            <img src="img/roadmap2.png" alt="No image">
+          </div>
+        </div>
+      </div>
+      
     </main>
     <footer></footer>
-    <script
-      src="https://kit.fontawesome.com/de51f8eccb.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
