add new blocks in html and style (roadmap, partners, faq, team)

--- a/index.html
+++ b/index.html
@@ -228,7 +228,98 @@
           </div>
         </div>
       </div>
-      
+      <div class="partners">
+        <h1 class="partners__title">OUR PARTNERS</h1>
+        <div class="partners__box">
+          <h3>LOGOHOLDER</h3>
+          <h3>LOGOHOLDER</h3>
+          <h3>LOGOHOLDER</h3>
+          <h3>LOGOHOLDER</h3>
+          <h3>LOGOHOLDER</h3>
+          <h3>LOGOHOLDER</h3>
+        </div>
+      </div>
+      <div class="faq">
+        <div class="faq__header">
+          <h3>FREQUENTLY <h3>ASKED</h3> QUESTIONS</h3>
+          <img src="img/faq_image.png" alt="No photo">
+        </div>
+        <div class="faq__questions">
+          <ul class="faq__list">
+            <li class="faq__question">
+              How can I get into Meta RL?
+              <div class="faq__question__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est architecto totam ex animi beatae aliquid commodi dolores quaerat voluptatibus, iusto incidunt velit autem cumque quae ipsam nihil neque doloremque blanditiis.</div>
+            </li>
+            <li class="faq__question">
+              When is the NFT launch?
+              <div class="faq__question__description"></div>
+            </li>
+            <li class="faq__question">
+              Where can I get a WAVE NFT?
+              <div class="faq__question__description"></div>
+            </li>
+            <li class="faq__question">
+              Can I hold META WAVE NFT as an investment?
+              <div class="faq__question__description"></div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="team">
+        <div class="team__title">
+          <h3>TEAM</h3>
+        </div>
+        <div class="team__container">
+          <div class="team__person">
+            <img src="img/team1.png" alt="No photo">
+            <h5 class="team__person__name">
+              SHAKY LAKE
+            </h5>
+            <h5 class="team__person__career">FOUNDER</h5>
+            <div class="messengers"><ul>
+              <li class="twitter">
+                <a href="/"><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li class="linkedin">
+                <a href="/"><i class="fa-brands fa-linkedin-in"></i></a>
+              </li>
+            </ul></div>
+            <h5 class="team__person__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
+          </div>
+          <div class="team__person">
+            <img src="img/team2.png" alt="No photo">
+            <h5 class="team__person__name">
+              BAKY HIKE
+            </h5>
+            <h5 class="team__person__career">CO-FOUNDER</h5>
+            <div class="messengers"><ul>
+              <li class="twitter">
+                <a href="/"><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li class="linkedin">
+                <a href="/"><i class="fa-brands fa-linkedin-in"></i></a>
+              </li>
+            </ul></div>
+            <h5 class="team__person__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
+          </div>
+          <div class="team__person">
+            <img src="img/team3.png" alt="No photo">
+            <h5 class="team__person__name">
+              VANIA DO
+            </h5>
+            <h5 class="team__person__career">PRODUCER</h5>
+            <div class="messengers"><ul>
+              <li class="twitter">
+                <a href="/"><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li class="linkedin">
+                <a href="/"><i class="fa-brands fa-linkedin-in"></i></a>
+              </li>
+            </ul></div>
+            <h5 class="team__person__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
