add new blocks (join, footer) and styles for them, add new variables for font (all were replaced in scss) and mainpadding

--- a/index.html
+++ b/index.html
@@ -320,7 +320,53 @@
           </div>
         </div>
       </div>
+      <div class="join">
+        <div class="join__container">
+          <div class="join__header">
+            <div class="join__title"><h3>JOIN OUR <h3>DISCORD</h3></h3></div>
+            <h5 class="join__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet debitis eaque est quae expedita quidem eum similique! Natus tempora distinctio modi sed cumque.</h5>
+            <a class="join__btn" href="/"><i class="fa-brands fa-discord"></i>Join Discord</a>
+          </div>
+          <div class="join__imgwrap">
+            <img src="img/join.png" alt="No photo">
+          </div>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+          <div class="col1"><ul><li><a>Meta<sup>RL</sup></a></li>
+          <li>2022 All rights reserved</li></ul></div>
+          <div class="col2"><ul>
+            <li>Wave NFTs</li>
+            <li>Stories</li>
+            <li>Contact</li>
+          </ul></div>
+          <div class="col3"><ul>
+            <li>Licencing</li>
+            <li>Style Guide</li>
+            <li>Changelog</li>
+          </ul></div>
+          <div class="col4"><ul>
+            <li>Powered by Webflow</li>
+            <li>Developed by Anastasiia G.</li>
+          </ul></div>
+          <div class="col5 messengers"><ul>
+            <li class="twitter">
+              <a href="/"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li class="facebook">
+              <a href="/"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li class="youtube">
+              <a href="/"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li class="telegram">
+              <a href="/"><i class="fa-solid fa-paper-plane"></i></a>
+            </li>
+          </ul></div>
+      </div>
+      
+    </footer>
   </body>
 </html>
