--- a/index.html
+++ b/index.html
@@ -101,8 +101,12 @@
         </div>
       </div>
       <div class="artists">
-        <div class="artists__header">
-          <h1>ARTISTS</h1>
+        <div class="artists__header" id="artists">
+          <h3>ARTISTS</h3>
+          <h3>ARTISTS</h3>
+          <h3>ARTISTS</h3>
+          <h3>ARTISTS</h3>
+          <h3>ARTISTS</h3>
         </div>
         <div class="artists__block">
           <figure>
@@ -304,8 +308,11 @@
         </div>
       </div>
       <div class="team">
-        <div class="team__title">
+        <div class="team__title" id="team">
           <h3>TEAM</h3>
+          <h3>TEAM</h3>
+          <h3>TEAM</h3>
+          <h3>TEAM</h3>       
         </div>
         <div class="team__container">
           <div class="team__person">
@@ -408,5 +415,7 @@
     </footer>
     <script src="scripts/faq.js"></script>
     <script src="scripts/story.js"></script>
+    <script src="scripts/artitstsRunLine.js"></script>
+    <script src="scripts/teamRunLine.js"></script>
   </body>
 </html>
