--- a/index.html
+++ b/index.html
@@ -104,9 +104,6 @@
         <div class="artists__header" id="artists">
           <h3>ARTISTS</h3>
           <h3>ARTISTS</h3>
-          <h3>ARTISTS</h3>
-          <h3>ARTISTS</h3>
-          <h3>ARTISTS</h3>
         </div>
         <div class="artists__block">
           <figure>
@@ -269,6 +266,44 @@
             <img src="img/roadmap2.png" alt="No image">
           </div>
         </div>
+        <!-- <div class="roadmap__circles">
+          <div class="roadmap__circleblock">
+            <div class="roadmap__circleone centr_radius">
+              <div class="roadmap__circletwo centr_radius">
+                <div class="roadmap__circlethree centr_radius">
+                  <div class="roadmap__circlefour centr_radius">
+                    <div class="roadmap__circlefive centr_radius">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="roadmap__circleblock">
+            <div class="roadmap__circleone centr_radius">
+              <div class="roadmap__circletwo centr_radius">
+                <div class="roadmap__circlethree centr_radius">
+                  <div class="roadmap__circlefour centr_radius">
+                    <div class="roadmap__circlefive centr_radius">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="roadmap__circleblock">
+            <div class="roadmap__circleone centr_radius">
+              <div class="roadmap__circletwo centr_radius">
+                <div class="roadmap__circlethree centr_radius">
+                  <div class="roadmap__circlefour centr_radius">
+                    <div class="roadmap__circlefive centr_radius">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> -->
       </div>
       <div class="partners">
         <h1 class="partners__title">OUR PARTNERS</h1>
@@ -309,10 +344,8 @@
       </div>
       <div class="team">
         <div class="team__title" id="team">
-          <h3>TEAM</h3>
-          <h3>TEAM</h3>
-          <h3>TEAM</h3>
-          <h3>TEAM</h3>       
+          <h3>TEAM</h3>     
+          <h3>TEAM</h3> 
         </div>
         <div class="team__container">
           <div class="team__person">
@@ -416,6 +449,6 @@
     <script src="scripts/faq.js"></script>
     <script src="scripts/story.js"></script>
     <script src="scripts/artitstsRunLine.js"></script>
-    <script src="scripts/teamRunLine.js"></script>
+    <script src="scripts/teamRunLine.js"></script> 
   </body>
 </html>
